--- a/CSharp/Thread/Thread.csproj
+++ b/CSharp/Thread/Thread.csproj
@@ -42,7 +42,9 @@
   <ItemGroup>
     <Compile Include="LimitedConcurrencyLevelTaskScheduler.cs" />
     <Compile Include="OrderedTaskScheduler.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
