--- a/CSharp/Editor/Editor.csproj
+++ b/CSharp/Editor/Editor.csproj
@@ -97,6 +97,10 @@
       <Project>{7CC7BF9C-13BE-470E-BC35-6A1944767899}</Project>
       <Name>Login</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Modules\TreeCanvas\TreeCanvas.csproj">
+      <Project>{6CD185D1-08E0-4729-A999-2D5B57BA8193}</Project>
+      <Name>TreeCanvas</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="NLog.config">
