--- a/CSharp/Editor/NLog.config
+++ b/CSharp/Editor/NLog.config
@@ -3,7 +3,7 @@
 		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<targets>
 		<target name="file" xsi:type="File" fileName="${basedir}/Log.txt"
-				layout="${longdate} ${threadid:padCharacter=0:padding=4:fixedLength=true} ${callsite:className=false:includeSourcePath=false:methodName=false:fileName=true}] ${message}"/>
+				layout="${longdate} ${threadid:padCharacter=0:padding=4:fixedLength=true} ${callsite:className=false:includeSourcePath=false:methodName=false:fileName=true}  ${message}"/>
 	</targets>
 	<rules>
 		<logger name="*" minlevel="Trace" writeTo="file"/>
