--- a/CSharp/Modules/TreeCanvas/TreeCanvas.csproj
+++ b/CSharp/Modules/TreeCanvas/TreeCanvas.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Expression.Drawing" />
+    <Reference Include="Microsoft.Expression.Interactions" />
     <Reference Include="Microsoft.Practices.Prism">
       <HintPath>..\..\Packages\Prism.4.0.0.0\lib\NET40\Microsoft.Practices.Prism.dll</HintPath>
     </Reference>
@@ -51,6 +52,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Interactivity" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -60,6 +62,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Arrow.cs" />
+    <Compile Include="Connector.cs" />
+    <Compile Include="Node.cs" />
     <Compile Include="TreeCanvasModule.cs" />
     <Compile Include="TreeCanvasView.xaml.cs">
       <DependentUpon>TreeCanvasView.xaml</DependentUpon>
@@ -76,10 +81,6 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Controls\BehaviorView\BehaviorView.csproj">
-      <Project>{844E644E-A19D-4BBA-9E20-287977E2564D}</Project>
-      <Name>BehaviorView</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\Infrastructure\Infrastructure.csproj">
       <Project>{48A2E149-0DAC-41B4-BB54-DFBCCD6D42B3}</Project>
       <Name>Infrastructure</Name>
