--- a/CSharp/Modules/TreeCanvas/TreeCanvas.csproj
+++ b/CSharp/Modules/TreeCanvas/TreeCanvas.csproj
@@ -68,9 +68,6 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Arrow.cs" />
-    <Compile Include="Connector.cs" />
-    <Compile Include="Node.cs" />
     <Compile Include="Person.pb.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -92,6 +89,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Controls\BehaviorTree\BehaviorTree.csproj">
+      <Project>{88A0D086-1C51-466C-9123-793FFB5714B8}</Project>
+      <Name>BehaviorTree</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Infrastructure\Infrastructure.csproj">
       <Project>{48A2E149-0DAC-41B4-BB54-DFBCCD6D42B3}</Project>
       <Name>Infrastructure</Name>
@@ -105,9 +106,6 @@
       <Generator>CmdTool</Generator>
       <LastGenOutput>Person.pb.cs</LastGenOutput>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="CHANGES.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
