--- a/CSharp/Editor/Editor.csproj
+++ b/CSharp/Editor/Editor.csproj
@@ -98,7 +98,7 @@
       <Project>{48A2E149-0DAC-41B4-BB54-DFBCCD6D42B3}</Project>
       <Name>Infrastructure</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Modules\TreeCanvas\TreeCanvas.csproj">
+    <ProjectReference Include="..\Modules\BehaviorTree\BehaviorTree.csproj">
       <Project>{6CD185D1-08E0-4729-A999-2D5B57BA8193}</Project>
       <Name>TreeCanvas</Name>
     </ProjectReference>
