增加BehaviorTreeLayout,用于调整行为树界面布局

--- a/CSharp/Modules/BehaviorTree/BehaviorTree.csproj
+++ b/CSharp/Modules/BehaviorTree/BehaviorTree.csproj
@@ -68,6 +68,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BehaviorTreeLayout.cs" />
     <Compile Include="BehaviorTreeViewModel.cs" />
     <Compile Include="BehaviorTreeModule.cs" />
     <Compile Include="BehaviorTreeView.xaml.cs">
