清理代码,整理格式

--- a/CSharp/Editor/NLog.config
+++ b/CSharp/Editor/NLog.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
-		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+
+<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<targets>
 		<target name="file" xsi:type="File" fileName="${basedir}/Log.txt"
-				layout="${longdate} ${threadid:padCharacter=0:padding=4:fixedLength=true} ${callsite:className=false:includeSourcePath=false:methodName=false:fileName=true}  ${message}"/>
+		        layout="${longdate} ${threadid:padCharacter=0:padding=4:fixedLength=true} ${callsite:className=false:includeSourcePath=false:methodName=false:fileName=true}  ${message}" />
 	</targets>
 	<rules>
-		<logger name="*" minlevel="Trace" writeTo="file"/>
+		<logger name="*" minlevel="Trace" writeTo="file" />
 	</rules>
 </nlog>
