Nuget目前右键解决方案可以选择自动安装缺失的包,十分强大!!

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.suo
 *.user
 
+CSharp.sln.DotSettings
 
 .settings/
 Dbg/
@@ -16,5 +17,7 @@ bin/
 obj/
 Properties/
 Packages/
+packages/
 _ReSharper.CSharp/
+.nuget/
 
