1.去除glog gflags库,gtest gmock直接集成到代码库中 2.cmake可以创建project folder非常方便,所有test放到test目录!

--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -1,5 +1,6 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)
 
+SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
 SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Cmake)
 SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)
 IF(NOT CMAKE_BUILD_TYPE )
@@ -19,42 +20,26 @@ INCLUDE_DIRECTORIES(Platform)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/Platform)
 INCLUDE_DIRECTORIES(Game)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/Game)
-
-FIND_PACKAGE(GFlags REQUIRED)
-INCLUDE_DIRECTORIES(${GFLAGS_INCLUDE_DIR})
-
-FIND_PACKAGE(GLog REQUIRED)
-INCLUDE_DIRECTORIES(${GLOG_INCLUDE_DIR})
-
-FIND_PACKAGE(GTest REQUIRED)
-INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIR})
-
-FIND_PACKAGE(GMock REQUIRED)
-INCLUDE_DIRECTORIES(${GMOCK_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(ThirdParty)
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/ThirdParty)
 
 FIND_PACKAGE(Protobuf REQUIRED)
 INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
 
-FIND_PACKAGE(PythonLibs REQUIRED)
-INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIR})
-
 FIND_PACKAGE(Perftools REQUIRED)
 INCLUDE_DIRECTORIES(${PERFTOOLS_INCLUDE_DIR})
 
-FIND_PACKAGE(Boost REQUIRED python thread system)
+FIND_PACKAGE(Boost REQUIRED thread system)
 SET(Boost_USE_STATIC_LIBS    ON)
 SET(Boost_USE_MULTITHREADED  ON)
 SET(Boost_USE_STATIC_RUNTIME OFF)
 INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIR})
 
 SET(ThirdPartyLibs
-	${GLOG_LIBRARIES}
-	${GFLAGS_LIBRARIES}
-	${GTEST_LIBRARIES}
-	${GMOCK_LIBRARIES}
+	gtest
+	gmock
 	${PROTOBUF_LIBRARIES}
 	${Boost_LIBRARIES}
-	${PYTHON_LIBRARIES}
 	${PERFTOOLS_DEBUG_LIBRARIES}
 )
 
@@ -72,8 +57,9 @@ IF(MSVC)
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:libcd.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:msvcrtd.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:msvcprtd.lib")
-	ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB -DBOOST_PYTHON_STATIC_LIB -DGOOGLE_GLOG_DLL_DECL= -DGFLAGS_DLL_DECL=)
+	ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB -DBOOST_PYTHON_STATIC_LIB -DWIN64)
 ENDIF()
 
 ADD_SUBDIRECTORY(Platform)
 ADD_SUBDIRECTORY(Game)
+ADD_SUBDIRECTORY(ThirdParty)
