--- a/Cpp/Platform/Python/CMakeLists.txt
+++ b/Cpp/Platform/Python/CMakeLists.txt
@@ -1,21 +1,26 @@
+FILE(GLOB Header "*.h")
+
 SET(PythonSrc 
+	${Header}
 	PythonInit.cc 
 	PythonInterpreter.cc
 )
+
 ADD_LIBRARY(PythonInterpreter ${PythonSrc})
 
 ADD_EXECUTABLE(PythonInitTest PythonInitTest.cc)
 ADD_EXECUTABLE(PythonInterpreterTest PythonInterpreterTest.cc)
 
-SET(Excutes 
+SET(Tests 
 	PythonInitTest 
 	PythonInterpreterTest
 )
 
-FOREACH(Excute ${Excutes})
+FOREACH(Test ${Tests})
 	TARGET_LINK_LIBRARIES(${Excute}
 		PythonInterpreter
 		${ThirdPartyLibs}
 	)
-	ADD_TEST(${Excute} ${Excute})
+	ADD_TEST(${Test} ${Test})
+	SET_PROPERTY(TARGET ${Test} PROPERTY FOLDER "Tests")
 ENDFOREACH()
