--- a/Cpp/Platform/Thread/CMakeLists.txt
+++ b/Cpp/Platform/Thread/CMakeLists.txt
@@ -1,4 +1,7 @@
+FILE(GLOB Header "*.h")
+
 SET(ThreadSrc 
+	${Header}
 	ThreadPool.cc
 	CountBarrier.cc
 )
@@ -8,15 +11,16 @@ ADD_LIBRARY(Thread ${ThreadSrc})
 ADD_EXECUTABLE(ThreadPoolTest ThreadPoolTest.cc)
 ADD_EXECUTABLE(CountBarrierTest CountBarrierTest.cc)
 
-SET(Excutes 
+SET(Tests 
 	ThreadPoolTest 
 	CountBarrierTest
 )
 
-FOREACH(Excute ${Excutes})
-	TARGET_LINK_LIBRARIES(${Excute}
+FOREACH(Test ${Tests})
+	TARGET_LINK_LIBRARIES(${Test}
 		Thread
 		${ThirdPartyLibs}
 	)
-	ADD_TEST(${Excute} ${Excute})
+	ADD_TEST(${Test} ${Test})
+	SET_PROPERTY(TARGET ${Test} PROPERTY FOLDER "Tests")
 ENDFOREACH()
