--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -2,9 +2,9 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)
 
 SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
 SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Cmake)
-SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)
-IF(NOT CMAKE_BUILD_TYPE )
-	SET(CMAKE_BUILD_TYPE "Debug")
+SET(CMAKE_USE_RELATIVE_PATHS ON)
+IF(NOT CMAKE_BUILD_TYPE)
+	SET(CMAKE_BUILD_TYPE Debug)
 ENDIF()
 
 PROJECT(Cpp)
@@ -25,15 +25,18 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/ThirdParty)
 
 FIND_PACKAGE(Protobuf REQUIRED)
 INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
+LINK_DIRECTORIES(${PROTOBUF_LIBRARY_DIR})
 
 FIND_PACKAGE(Perftools REQUIRED)
 INCLUDE_DIRECTORIES(${PERFTOOLS_INCLUDE_DIR})
+LINK_DIRECTORIES(${PERFTOOLS_LIBRARY_DIR})
 
 FIND_PACKAGE(Boost REQUIRED thread system)
 SET(Boost_USE_STATIC_LIBS    ON)
 SET(Boost_USE_MULTITHREADED  ON)
 SET(Boost_USE_STATIC_RUNTIME OFF)
 INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIR})
+LINK_DIRECTORIES(${Boost_LIBRARY_DIR})
 
 SET(ThirdPartyLibs
 	gtest
@@ -44,7 +47,7 @@ SET(ThirdPartyLibs
 )
 
 IF(PROFILE)
-    SET(ThirdPartyLibs ${ThirdPartyLibs} ${PERFTOOLS_PROFILE_LIBRARIES})
+	SET(ThirdPartyLibs ${ThirdPartyLibs} ${PERFTOOLS_PROFILE_LIBRARIES})
 ENDIF()
 
 MESSAGE(STATUS "${ThirdPartyLibs}")
